<resources>
    <string name="app_name" translatable="false">Transition Technologies Managed Services</string>
    <string name="app_projects_list">Lista projektow</string>
    <string name="app_user_projects">Twoje projekty</string>
    <string name="leader_role" translatable="false">Team Leader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_error">Podany adres E-mail jest niepoprawny!</string>
    <string name="password_error">Podane hasło jest nieprawidłowe!</string>
    <string name="generic_error">Wystąpił błąd. Spróbuj ponownie.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Hasło</string>
    <string name="login_button">Zaloguj</string>
    <string name="login_separator">LUB</string>
    <string name="register">Zarejestruj</string>
    <string name="registration_successful">Rejestracja zakończone sukcesem.\nNa podany adres e-mail wysłaliśmy link aktywacyjny.</string>
    <string name="registration_failed">Niestety rejestracja się nie powiodła.\nPrzepraszamy.</string>
    <string name="negative_button">Ok</string>
    <string name="firstname_error">To pole nie może być puste!</string>
    <string name="lastname_error">To pole nie może być puste!</string>
    <string name="confirm_password_error">Hasła muszą być takie same!</string>
    <string name="firstname_hint">Imię</string>
    <string name="email_ttms_hint">Adres E-mail TTMS</string>
    <string name="lastname_hint">Nazwisko</string>
    <string name="confirm_password_hint">Potwierdź hasło</string>
    <string name="cancel_string">Anuluj</string>
    <string name="app_co_workers">Lista współpracowników</string>
    <string name="app_profile">Profil</string>
    <string name="app_settings">Ustawienia</string>
    <string name="logout">Logout</string>
    <string name="settings">Ustawienia</string>
    <string name="role">Rola</string>
    <string name="app_single_employee">Pojedyńczy pracownik</string>
    <string name="change_pass">Zmień hasło</string>
    <string name="add_technology">Dodaj technologie</string>
    <string name="image_description">image description</string>
    <string name="profil_tittle">Twój profil</string>
    <string name="tech_list">Twoje technologie:</string>
    <string name="tech_list_empty">Lista twoich technologii jest pusta. Dodaj technolgie.</string>
    <string name="ok">Ok</string>

    <string name="technoloy">Technology</string>
    <string name="technoloy_confirm_del">Czy na pewno chcesz usunąć wybraną technologię?</string>
    <string name="confirm">Tak</string>

    <string name="project_start_date">Data startu</string>
    <string name="project_end_date">Data zakończenia</string>
    <string name="app_single_project">Pojedyńczy projekt</string>

    <string name="project_candidates">Kandydaci</string>
    <string name="project_participants">Uczestnicy</string>
    <string name="project_entries">Stanowiska</string>
    <string name="project_technologies">Technologie</string>

    <string name="oldPwd">Aktualne hasło</string>
    <string name="newPwd">Nowe hasło</string>
    <string name="cnfPwd">Potwierdź hasło</string>
    <string name="chngPwd">Zmiana hasła</string>
    <string name="confirm2">Zatwierdź</string>
    <string name="oldPwdDenied">Hasło niepoprawne!</string>
    <string name="newPwdDenied">Nie podałeś nowego hasła!</string>
    <string name="cnfPwdDenied">Nie potwierdziłeś nowego hasła!</string>
    <string name="pwdDontMatch">Hasła są różne!</string>
    <string name="pwdSuccessChange">Hasło zostało zmienione pomyślnie</string>
    <string name="pwdWrong">Podałeś złe hasło!</string>

    <string name="addTech">Dodaj technologie</string>
    <string name="addedTech">Dodano technologie: </string>
    <string name="cannotAddTech">Technologia już dodana!</string>
    <string name="done">Zrobione</string>

    <string name="change_avatar">Zmień awatar</string>
    <string name="change_personal_data">Zmień dane osobowe</string>
    <string name="name">Imię:</string>
    <string name="surname">Nazwisko:</string>
    <string name="e_mail">E-mail:</string>
</resources>
