<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginTop="50dp"
        android:background="@color/header">


        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:padding="10dp"
            android:text="@string/chngPwd"
            android:textAlignment="center"
            android:textColor="@color/header"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/etOldPwd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etOldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/oldPwd"
            android:inputType="textPassword"
            android:textColor="@color/bgUserItem"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/etNewPwd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/newPwd"
            android:inputType="textPassword"
            android:textColor="@color/bgUserItem"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/etCnfPwd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etCnfPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/cnfPwd"
            android:inputType="textPassword"
            android:textColor="@color/bgUserItem"
            android:textColorHint="@color/hintColor"
            android:textCursorDrawable="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/header"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/bCancel"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                android:padding="20dp"
                android:text="@string/cancel_string"
                android:textColor="@color/header"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bConfirm"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/white"
                android:padding="20dp"
                android:text="@string/confirm2"
                android:textColor="@color/header"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_description"
        android:src="@drawable/logo" />

</RelativeLayout>